fixed:overflow-x:hidden

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: #eeeeee;
+    overflow-x: hidden;
 }
 
 header {
